--- a/00-B1-Autoclaims/02-Exercise1-Part3and4.Rmd
+++ b/00-B1-Autoclaims/02-Exercise1-Part3and4.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Statistics with R"
-subtitle: "R for Actuarial Students"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -10,5 +10,17 @@ output:
 ---
 
 
-Prepare  a  contingency  table  identifying  the  proportion  of  insured  across  differentCLASS(es) for each gender. Test the null hypothesis “There is no relationship betweenthe  GENDER  and  the  CLASS  of  the  insured”  against  an  alternate  hypothesis  ofexistence of significant relation at 95% confidence level. Perform an appropriate testand comment.(10)iv)Use  an  appropriate  test  to  test  if  the  mean  claim  amount  paid  and  variance  of  claimamounts paid is uniform between males and females.
+* Prepare  a  contingency  table  identifying  the  proportion  of  insured  across  differentCLASS(es) for each gender. Test the null hypothesis “There is no relationship betweenthe  GENDER  and  the  CLASS  of  the  insured”  against  an  alternate  hypothesis  of existence of significant relation at 95% confidence level.
 
+
+* Perform an appropriate testand comment.
+
+---
+
+
+Part 4
+============================
+
+Use  an  appropriate  test  to  test  if  the  mean  claim  amount  paid  and  variance  of  claim amounts paid is uniform between males and females.
+
+---
