--- a/00-B1-Autoclaims/06-Exercise3-Part3and4.Rmd
+++ b/00-B1-Autoclaims/06-Exercise3-Part3and4.Rmd
@@ -13,12 +13,15 @@ output:
 
 ```{r}
 library(readr)
-AutoClaims <- read_csv("AutoClaims.csv")
+AutoClaims <- read_csv("Data/AutoClaims.csv")
 ``` 
 
 Your actuarial friend has suggested you to use natural logarithm of “PAID” claims instead of the actual “PAID” Claim amount because the log e (PAID) is more closer to
 normal distribution than “PAID” Claims. Verify the statement made by your friend by comparing the Skewness and Excess Kurtosis of both the PAID claims as well as
 log e (PAID). Write appropriate custom functions to compute both of them. (7)
+
+
+---
 
 Repeat the model in (i) above by considering the suggestion in (iii). Identify and comment on the key differences between both the models. (6)
 Your Manager has suggested that the model can be improved by adding interaction effects between STATE and CLASS, STATE and GENDER, CLASS and GENDER
@@ -27,6 +30,7 @@ as additional variables to the set of independent variables taken in (i). Evalua
 %
 iii)
 
+---
 
 
 ```{r}
@@ -39,6 +43,7 @@ skew(AutoClaims$PAID)
 ``` 
 
 
+---
 
 ```{r}
 ##  2.619422
@@ -56,7 +61,7 @@ skew(log(AutoClaims$PAID))
 kurt(log(AutoClaims$PAID))
 ``` 
 
-
+---
 
 
 Skewness and Kurtosis of Log (Claims) are more close to Zero compared to those of actual
@@ -64,194 +69,55 @@ claims paid, thus indicating the possibility of using linear regression with thi
 variable
 
 
+---
+
 iv)
+
+```{r}
 # Using Natural Logarithm of the claims paid
 model2<-lm(log(PAID)~.,data = AutoClaims)
 summary(model2)
-[3]
-Page 9 of 13IAI
-CS1B-0619
-anova(model2)
-Analysis of Variance Table
-Response: log(PAID)
-Df Sum Sq Mean Sq F value Pr(>F)
-STATE
-10 246.26 24.626 107.6969 < 2.2e-16 ***
-CLASS
-3 690.09 230.031 1006.0090 < 2.2e-16 ***
-GENDER
-1 10.88 10.882 47.5908 7.927e-12 ***
-AGE
-1 0.12 0.123 0.5384 0.4632
-Residuals 1401 320.35 0.229
+```
+
+
 ---
-Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-##
-## Call:
-## lm(formula = log(PAID) ~ ., data = AutoClaims)
-##
-## Residuals:
-## Min
-1Q Median
-3Q Max
-## -0.96098 -0.34264 -0.05047 0.36828 1.08237
-##
-## Coefficients:
-##
-Estimate Std. Error t value Pr(>|t|)
-## (Intercept) 9.896308 0.168777 58.635 < 2e-16 ***
-## STATESTATE 02 -0.154804 0.079889 -1.938 0.0529 .
-## STATESTATE 03 0.110585 0.092342 1.198 0.2313
-## STATESTATE 04 0.049554 0.085147 0.582 0.5607
-## STATESTATE 06 0.116190 0.091239 1.273 0.2031
-## STATESTATE 07 0.142721 0.101543 1.406 0.1601
-## STATESTATE 10 0.098014 0.107391 0.913 0.3616
-## STATESTATE 12 0.027982 0.103105 0.271 0.7861
-## STATESTATE 14 0.090316 0.102231 0.883 0.3771
-## STATESTATE 15 -0.645918 0.075628 -8.541 < 2e-16 ***
-## STATESTATE 17 0.004611 0.085455 0.054 0.9570
-## CLASSC11 -1.203098 0.052225 -23.037 < 2e-16 ***
-## CLASSC6
--1.988743 0.049829 -39.911 < 2e-16 ***
-## CLASSF6
--0.034909 0.062787 -0.556 0.5783
-## GENDERM
--0.180923 0.026136 -6.922 6.75e-12 ***
-## AGE
-0.002145 0.002923 0.734 0.4632
-## ---
-## Signif. codes: 0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
-##
-## Residual standard error: 0.4782 on 1401 degrees of freedom
-## Multiple R-squared: 0.7473, Adjusted R-squared: 0.7446
-## F-statistic: 276.2 on 15 and 1401 DF, p-value: < 2.2e-16
+
+
+```{r}
+
+anova(model2)
+```
+
+---
+
+
 Key Differences
 1. R-Squared and Adjusted R-Squared improved
 fit compared to the initial model
 and hence the model is a better
-[1.5]
-Page 10 of 13IAI
-CS1B-0619
+
+---
+
 2. While a the significance level of a few factor coefficients when compared with the
 base categories changed, the overall significant variables did not change which can
 be inferred from the ANOVA table
 [1.5]
-[6]
+
+---
+
+
 v)
+
+```{r}
 # Using Interaction effects in the model
 model3<-lm(PAID~.+STATE:CLASS+STATE:GENDER+CLASS:GENDER,data = AutoClaims)
 summary(model3)
-##
-## Call:
-## lm(formula = PAID ~ . + STATE:CLASS + STATE:GENDER + CLASS:GENDER,
-## data = AutoClaims)
-##
-## Residuals:
-## Min
-1Q Median
-3Q Max
-## -13110.3 -1475.9 -377.5 1250.5 20442.8
-##
-## Coefficients: (3 not defined because of singularities)
-##
-Estimate Std. Error t value Pr(>|t|)
-## (Intercept)
-24373.09 3236.06 7.532 9.08e-14 ***
-## STATESTATE 02
--7868.94 3269.51 -2.407 0.016227 *
-## STATESTATE 03
--3695.87 3422.76 -1.080 0.280427
-## STATESTATE 04
-6883.00 3545.51 1.941 0.052425 .
-## STATESTATE 06
-5428.58 3262.57 1.664 0.096363 .
-## STATESTATE 07
--979.80 1184.59 -0.827 0.408314
-## STATESTATE 10
-7340.08 3546.35 2.070 0.038664 *
-## STATESTATE 12
-1048.26 3382.21 0.310 0.756659
-## STATESTATE 14
--2796.37 3538.40 -0.790 0.429494
-## STATESTATE 15
--14038.72 3164.04 -4.437 9.86e-06 ***
-## STATESTATE 17
--4266.43 3640.98 -1.172 0.241490
-## CLASSC11
--15321.38 3534.31 -4.335 1.56e-05 ***
-## CLASSC6
--20741.82 3262.53 -6.358 2.79e-10 ***
-## CLASSF6
-4075.85 3386.90 1.203 0.229026
-## GENDERM
--5508.80 1305.95 -4.218 2.62e-05 ***
-## AGE
-23.06 19.35 1.192 0.233581
-## STATESTATE 02:CLASSC11 4114.13 3666.38 1.122 0.262008
-## STATESTATE 03:CLASSC11 2022.51 3802.06 0.532 0.594847
-## STATESTATE 04:CLASSC11 -7719.04 3904.17 -1.977 0.048229 *
-## STATESTATE 06:CLASSC11 -6209.18 3743.46 -1.659 0.097412 .
-## STATESTATE 07:CLASSC11 -1049.15 1827.01 -0.574 0.565899
-## STATESTATE 10:CLASSC11 -6795.03 3956.71 -1.717 0.086144 .
-## STATESTATE 12:CLASSC11 -3756.14 3939.41 -0.953 0.340517
-## STATESTATE 14:CLASSC11 1668.66 3927.62 0.425 0.671012
-## STATESTATE 15:CLASSC11 7776.13 3581.01 2.171 0.030066 *
-## STATESTATE 17:CLASSC11 2227.20 4011.07 0.555 0.578806
-## STATESTATE 02:CLASSC6 5677.35 3416.32 1.662 0.096777 .
-## STATESTATE 03:CLASSC6 2122.55 3605.64 0.589 0.556177
-## STATESTATE 04:CLASSC6 -8231.17 3692.27 -2.229 0.025957 *
-## STATESTATE 06:CLASSC6 -6151.60 3417.36 -1.800 0.072066 .
-## STATESTATE 07:CLASSC6
-NA
-NA NA
-NA
-## STATESTATE 10:CLASSC6 -8117.07 3687.43 -2.201 0.027884 *
-[5]
-Page 11 of 13IAI
-CS1B-0619
-## STATESTATE 12:CLASSC6 -2090.95 3561.06 -0.587 0.557187
-## STATESTATE 14:CLASSC6 1711.83 3617.52 0.473 0.636143
-## STATESTATE 15:CLASSC6 10891.63 3315.76 3.285 0.001046 **
-## STATESTATE 17:CLASSC6 2376.31 3776.77 0.629 0.529330
-## STATESTATE 02:CLASSF6 -1213.53 3542.37 -0.343 0.731971
-## STATESTATE 03:CLASSF6 -2272.17 3835.79 -0.592 0.553708
-## STATESTATE 04:CLASSF6 -11888.76 3838.95 -3.097 0.001996 **
-## STATESTATE 06:CLASSF6 -17556.04 4687.92 -3.745 0.000188 ***
-## STATESTATE 07:CLASSF6
-NA
-NA NA
-NA
-## STATESTATE 10:CLASSF6 1619.22 3953.37 0.410 0.682178
-## STATESTATE 12:CLASSF6
-NA
-NA NA
-NA
-## STATESTATE 14:CLASSF6 -2570.84 3769.07 -0.682 0.495299
-## STATESTATE 15:CLASSF6 -3790.79 3441.11 -1.102 0.270822
-## STATESTATE 17:CLASSF6 362.96 3914.01 0.093 0.926130
-## STATESTATE 02:GENDERM 3404.19 1199.24 2.839 0.004598 **
-## STATESTATE 03:GENDERM 3061.44 1347.32 2.272 0.023227 *
-## STATESTATE 04:GENDERM 1514.18 1279.13 1.184 0.236716
-## STATESTATE 06:GENDERM 2052.42 1337.41 1.535 0.125108
-## STATESTATE 07:GENDERM 3094.31 1450.30 2.134 0.033057 *
-## STATESTATE 10:GENDERM -73.99 1540.53 -0.048 0.961699
-## STATESTATE 12:GENDERM 2476.44 1474.81 1.679 0.093351 .
-## STATESTATE 14:GENDERM 2684.73 1624.58 1.653 0.098650 .
-## STATESTATE 15:GENDERM 3280.15 1148.55 2.856 0.004357 **
-## STATESTATE 17:GENDERM 3033.26 1261.58 2.404 0.016335 *
-## CLASSC11:GENDERM
-1171.02 730.27 1.604 0.109047
-## CLASSC6 :GENDERM
-2372.86 692.55 3.426 0.000630 ***
-## CLASSF6 :GENDERM
--1786.40 905.11 -1.974 0.048620 *
-## ---
-## Signif. codes: 0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
-##
-## Residual standard error: 3111 on 1361 degrees of freedom
-## Multiple R-squared: 0.8116, Adjusted R-squared: 0.804
-## F-statistic: 106.6 on 55 and 1361 DF, p-value: < 2.2e-16
-Interpretation
+```
+
+
+
+---
+
 anova(model3)
 Analysis of Variance Table
 [5]
@@ -273,9 +139,9 @@ Residuals 1361 1.3175e+10 9.6801e+06
 Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 1. R-Squared and Adjusted R-Squared increased to above 80% and hence the model is a
 better fit compared to the earlier models
-[2]
-Page 12 of 13IAI
-CS1B-0619
+
+---
+
 2. Interaction effect between a few classes and states emerged out to be very
 significant (State 6 and Class F6 came out to be significantly negative). Though State
 15 came out to be significantly negative when main effects alone were considered,
@@ -289,12 +155,17 @@ states (2,3,7,15) and for some rating classes (C6) whereas it is further negativ
 case of F6. So the differences can be magnified by considering the interaction
 effects, improving the predictability of the model
 
+
+---
+
 3.
 ANOVA table for the model suggests that except the age all the main effects and
 their interaction effects are significant at 5% significance level
 indicating their
 contribution to the predictability of the model
 
+
+---
 
 Part (i) and Part (ii) were attempted by maximum number of students. Many of them
 were successful in writing the code to fit a linear regression model but only successful
